--- a/LIVE/app/views/home/index.haml
+++ b/LIVE/app/views/home/index.haml
@@ -1,13 +1,6 @@
-.row.center-xs.middle-xs.blue.full-height
+.row.center-xs.middle-xs.dark-blue.full-height
 	.col-xs-12.col-sm-8
 		.box.white-text
 			%h1 LIVE
 			%p Liderazgo Virtuoso y Emprendedor
-.row.center-xs.middle-xs.red.full-height
-	.col-xs-12.col-sm-8
-		.box.white-text
-			%h1 hola mundo
-.row.center-xs.middle-xs.teal.full-height
-	.col-xs-12.col-sm-8
-		.box.white-text
-			%h1 hola mundo
+			=link_to "Registrarme", new_participant_path, class:"mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
