--- a/LIVE/app/assets/stylesheets/common.scss
+++ b/LIVE/app/assets/stylesheets/common.scss
@@ -2,10 +2,14 @@ html,body{
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	background-color: #bfd4df
 }
 h1{
 	margin: 0;
 }
 .full-height{
 	height: 100%;
+}
+.large-padding{
+	padding: 15px 10px;
 }
