--- a/LIVE/app/views/participants/_form.html.haml
+++ b/LIVE/app/views/participants/_form.html.haml
@@ -21,5 +21,5 @@
 		.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
 			= f.label :telefono, class: "mdl-textfield__label grey-text"
 			= f.text_field :telefono, autofocus: true, class: "mdl-textfield__input"
-		.actions
-			= f.submit 'Save', class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+		.large-padding
+			= f.submit 'Save', class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
