--- a/LIVE/app/views/participants/new.html.haml
+++ b/LIVE/app/views/participants/new.html.haml
@@ -1,8 +1,8 @@
 .full-height.row.middle-xs.white-text.center-xs.main-background.no-margin
 	.col-xs-10.col-sm-8.col-md-6.col-lg-4
 		.box
-			.big-padding.blue.white-text
-				%h1.no-margin.bold.light-blue-text Registrarme
+			.big-padding.dark-teal.white-text
+				%h1.no-margin.bold.grey-text Registrarme
 				%p 
 				=render "form"
 
