--- a/LIVE/app/assets/stylesheets/common.scss
+++ b/LIVE/app/assets/stylesheets/common.scss
@@ -13,3 +13,9 @@ h1{
 .large-padding{
 	padding: 15px 10px;
 }
+.pacifico-font{
+	font-family: 'Pacifico', cursive;
+}
+.big-font{
+	font-size: 3em;
+}
