--- a/LIVE/app/views/participants/new.html.haml
+++ b/LIVE/app/views/participants/new.html.haml
@@ -2,7 +2,7 @@
 	.col-xs-10.col-sm-8.col-md-6.col-lg-4
 		.box
 			.big-padding.dark-teal.white-text
-				%h1.no-margin.bold.grey-text Registrarme
+				%h1.no-margin.bold.grey-text.pacifico-font.big-font Registrarme
 				%p 
 				=render "form"
 
