--- a/LIVE/app/views/participants/_form.html.haml
+++ b/LIVE/app/views/participants/_form.html.haml
@@ -22,4 +22,4 @@
 			= f.label :telefono, class: "mdl-textfield__label grey-text"
 			= f.text_field :telefono, autofocus: true, class: "mdl-textfield__input"
 		.large-padding
-			= f.submit 'Save', class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+			= f.submit 'Guardar', class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
