--- a/LIVE/app/views/participants/_form.html.haml
+++ b/LIVE/app/views/participants/_form.html.haml
@@ -17,9 +17,9 @@
 			= f.text_field :interes, autofocus: true, class: "mdl-textfield__input"
 		.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
 			= f.label :correo, class: "mdl-textfield__label grey-text"
-			= f.text_field :correo, autofocus: true, class: "mdl-textfield__input"
+			= f.email_field :correo, autofocus: true, class: "mdl-textfield__input"
 		.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
 			= f.label :telefono, class: "mdl-textfield__label grey-text"
-			= f.text_field :telefono, autofocus: true, class: "mdl-textfield__input"
+			= f.number_field :telefono, autofocus: true, class: "mdl-textfield__input"
 		.large-padding
 			= f.submit 'Guardar', class: "mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
