--- a/LIVE/app/views/participants/show.html.haml
+++ b/LIVE/app/views/participants/show.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12.col-sm-10
     .box
-      .big-padding.white.mdl-shadow--2dp
+      .big-padding.white.mdl-shadow--2dp.black-text
         %p
           %b Nombre:
           = @participant.nombre
