--- a/LIVE/app/views/participants/new.html.haml
+++ b/LIVE/app/views/participants/new.html.haml
@@ -1,6 +1,7 @@
 .full-height.row.middle-xs.white-text.center-xs.main-background.no-margin
 	.col-xs-10.col-sm-8.col-md-6.col-lg-4
 		.box
+			#email-info.large-padding.white-text.light-red
 			.big-padding.dark-teal.white-text
 				%h1.no-margin.bold.grey-text.pacifico-font.big-font Registrarme
 				%p 
